change theme to minima

--- a/_config.yml
+++ b/_config.yml
@@ -1,4 +1,4 @@
-theme: jekyll-theme-primer
+theme: minima
 
 title: napari plugin Alfa Cohort
 description: Materials related to the napari plugin Alfa Cohort collaboration
